--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,8 @@ h3 {
 }
 
 .my-button {
-    display: flexbox;
+    display: flex;
+    align-items: center;
     margin: 20px;
     border-radius: 50% 50%;
     border: 3px solid #F2F2F2
