--- a/css/style.css
+++ b/css/style.css
@@ -31,12 +31,13 @@
 }
 
 .nav-links {
-    padding: 20px;
+    padding: 15px;
 }
 
 .nav-links:active {
+    padding-top: 38px;
     color: #0065FC;
-    border-top: solid thin #0065FC;
+    border-top: solid #0065FC;
   }
 
 /* Search section ------------------------------------------------------------------------------------------------ */
@@ -94,8 +95,14 @@ h3 {
     display: flex;
     margin: 20px;
     padding: 25px 25px;
+    width: 20px;
+    height: 20px;
     border-radius: 50%;
     background-color: #DEEBFF;
+}
+
+.fa-icon {
+    
 }
 
 .info-btn {
@@ -163,6 +170,9 @@ h3 {
 
 .main-title {
     width: 100%;
+    height: 74.69px;
+    display: flex;
+    justify-content: flex-start;
 }
 
 .accommodations-section {
@@ -180,6 +190,7 @@ h3 {
 }
 
 .main-card {
+    width: 25%;
     background-color: white;
     border-radius: 25px;
     margin: 20px;
@@ -205,9 +216,12 @@ h3 {
     justify-content: center;
     background-color: #F2F2F2;
     border-radius: 25px;
+    width: 25%;
 }
 
 .sidebar-card {
+    display: flex;
+    justify-content: space-between;
     background-color: white;
     border-radius: 25px;
     margin: 20px;
