--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,14 @@ h1 {
     font-size: 20px;
 }
 
+.search-btn:active {
+    background: #DEEBFF;
+    -webkit-box-shadow: inset 0px 0px 5px #9ec3ff;
+       -moz-box-shadow: inset 0px 0px 5px #9ec3ff;
+            box-shadow: inset 0px 0px 5px #9ec3ff;
+     outline: none;
+  }
+
 .search-box {
     padding: 10px 16px;
     outline: none;
@@ -91,18 +99,32 @@ h3 {
 
 /* Filter section ------------------------------------------------------------------------------------------------ */
 
+.my-button {
+    display: flex;
+    align-items: center;
+    margin: 20px;
+    border-radius: 30px 30px;
+    border: 3px solid #F2F2F2
+}
+
+.my-button:active {
+    background: #F2F2F2;
+    -webkit-box-shadow: inset 0px 0px 5px #c1c1c1;
+       -moz-box-shadow: inset 0px 0px 5px #c1c1c1;
+            box-shadow: inset 0px 0px 5px #c1c1c1;
+     outline: none;
+  }
+
+
 .btn {
     display: flex;
-    margin: 20px;
-    padding: 25px 25px;
+    justify-content: center;
+    align-items: center;
+    padding: 15px;
     width: 20px;
     height: 20px;
     border-radius: 50%;
     background-color: #DEEBFF;
-}
-
-.fa-icon {
-    
 }
 
 .info-btn {
@@ -110,16 +132,9 @@ h3 {
     font-size: 20px;
 }
 
-.my-button {
-    display: flex;
-    align-items: center;
-    margin: 20px;
-    border-radius: 50% 50%;
-    border: 3px solid #F2F2F2
+.filter-name {
+    padding: 0 10px;
 }
-
-/* .filter-name {
-} */
 
 .filter-section {
     margin: 0px 40px 0px 40px; 
@@ -191,9 +206,25 @@ h3 {
 
 .main-card {
     width: 25%;
+    height: auto;
     background-color: white;
     border-radius: 25px;
     margin: 20px;
+}
+
+.main-card-img {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+}
+
+.main-card-txt {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+    padding: 10px;
 }
 
 .show-more {
@@ -217,14 +248,29 @@ h3 {
     background-color: #F2F2F2;
     border-radius: 25px;
     width: 25%;
+    height: auto;
 }
 
 .sidebar-card {
     display: flex;
-    justify-content: space-between;
     background-color: white;
     border-radius: 25px;
     margin: 20px;
+}
+
+.sidebar-card-img {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 10px;
+}
+
+.sidebar-card-txt {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 10px;
 }
 
 /* Activities section ------------------------------------------------------------------------------------------------ */
