--- a/css/style.css
+++ b/css/style.css
@@ -183,30 +183,30 @@ h3 {
     margin: 40px;
 }
 
+.accommodations-section {
+    display: flex;
+    align-items: flex-start;
+}
+
 .main-title {
     width: 100%;
-    height: 74.69px;
     display: flex;
     justify-content: flex-start;
 }
-
-.accommodations-section {
-    display: flex;
-} 
 
 .accommodations-cards {
     display: flex;
     flex-flow: wrap row;
     justify-content: center;
-    flex: 3;
     margin-right: 40px;
+    flex: 3;
     background-color: #F2F2F2;
     border-radius: 25px;    
 }
 
 .main-card {
     width: 25%;
-    height: auto;
+    height: 50%;
     background-color: white;
     border-radius: 25px;
     margin: 20px;
