--- a/css/style.css
+++ b/css/style.css
@@ -215,6 +215,7 @@ h3 {
     justify-content: center;
     align-items: center;
     padding: 10px;
+    border-radius: 20px 20px 0 0;
 }
 
 .main-card-txt {
