--- a/css/style.css
+++ b/css/style.css
@@ -282,21 +282,25 @@ h3 {
   }
   
   .card {
-    background-color: #F2F2F2;
-    padding: 5px;
+    background-color: #ffffff;
     border-radius: 25px;
-    text-align: center;
     font-size: 20px;
     display: flex;
+    flex: 1;
     flex-direction: column;
+    margin: 25px;
+    box-shadow: -4px 7px 6px 2px #f2f2f2;
   }
   
   .card img {
     height: 100%;
+    padding: 0;
   }
-  
-  .card img {
-    padding: 10px;
+
+  .card p {
+      padding-left: 10px;
+      display: flex;
+      justify-content: space-between;
   }
 
 /* Activities section */
