--- a/css/style.css
+++ b/css/style.css
@@ -187,6 +187,9 @@ h3 {
 
 /* Main section ------------------------------------------------------------------------------------------------ */
 
+
+/* Main section ------------------------------------------------------------------------------------------------------ */
+
 .main {
     margin: 40px;
 }
